--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "jsverify": "^0.8.4",
     "ts-jest": "^29.1.5",
     "typescript": "^5.5.3"
   }
